typescript/checker/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            251,
        ),
        hi: BytePos(
            252,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember.ts:19:5
   |
19 | var c: C;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            327,
        ),
        hi: BytePos(
            331,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember.ts:24:11
   |
24 | var r3 = c.foo();
   |           ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            353,
        ),
        hi: BytePos(
            355,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember.ts:25:18
   |
25 | var rs = [r, r2, r3];
   |                  ^^

